# vocabulary

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  main.cpp
src/: CMakeLists.txt
src/database/include/: DatabaseTools.h
src/database/src/: DatabaseCreation.cpp  DatabaseTools.cpp  DatabaseUtils.cpp
src/gui/: GUI.h
vocabulary/: CMakeLists.txt
vocabulary/database/: CMakeLists.txt
vocabulary/database/include/: DatabaseCreation.h  DatabaseTools.h  DatabaseUtils.h
vocabulary/database/src/: DatabaseCreation.cpp  DatabaseTools.cpp  DatabaseUtils.cpp
vocabulary/gui/: CMakeLists.txt  GUI.cpp  GUI.h
vocabulary/gui/src/: GUI.cpp
